outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_00-37-10/evaluations/problem_eval-2921954043083267059_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate vs. lookahead distances while penalizing large angular deviations between current and destination paths.}
                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate vs. lookahead distances while penalizing large angular deviations between current and destination paths.}
                                                                                                                                    ^
SyntaxError: unmatched '}'
